--- a/app/src/app.html
+++ b/app/src/app.html
@@ -4,22 +4,15 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>TEVM Solidity Debugger</title>
-    <!-- Add JetBrains Mono font for Monaco editor -->
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <title>Tevm Tools - Solidity Debugger</title>
+    <!-- Add Inter font for UI and JetBrains Mono for code -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
-      /* Basic reset and font settings */
+      /* Basic reset */
       * {
         box-sizing: border-box;
         margin: 0;
         padding: 0;
-      }
-      body {
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-          'Open Sans', 'Helvetica Neue', sans-serif;
-        line-height: 1.5;
-        color: #333;
-        background: #f9f9f9;
       }
     </style>
     %sveltekit.head%
